--- a/src/languages/en-GB.json
+++ b/src/languages/en-GB.json
@@ -1,74 +1,75 @@
 {
-  "INFO_LIST_TITLE": "Liste des Bonus Almanax :",
-  "INFO_LIST_XP_FIELD": "XP / Drop :",
-  "INFO_LIST_JOB_FIELD": "Métiers :",
-  "INFO_LIST_MISCELLANEOUS_FIELD": "Divers :",
-  "INFO_MENTION": "Hey %s ! Utilise moi avec le prefix: `%s`.",
-  "INFO_HELP_BASE": "🔍 Affiche ce menu",
-  "INFO_HELP_ABOUT": "🔍 Affiche les informations liées à `%s`",
-  "INFO_HELP_LANG": "🔍 Permet de changer la langue de `%s`",
-  "INFO_HELP_SERVER": "🔍 Permet d'afficher la fluctuation des prix de l'offrande du serveur désigné",
-  "INFO_HELP_AUTO": "🔍 Active le postage automatique des offrandes de l'Almanax à minuit dans le salon où la commande est effectuée",
-  "INFO_HELP_TYPE": "🔍 Liste toutes les dates d'Almanax comportant le type de bonus désiré",
-  "INFO_HELP_REMIND": "🔍 Ajoute ou supprime un rappel d'Almanax",
-  "INFO_HELP_SHOW": "🔍 Affiche tout tes rappels d'Almanax",
-  "INFO_HELP_ALMANAX": "🔍 Liste les almanax de l'item ou la date spécifié",
-  "INFO_HELP_GUILD": "🔍 Affiche les informations détaillées de la guilde spécifié",
-  "INFO_HELP_WHOIS": "🔍 Affiche les informations détaillées du personnage spécifié",
-  "INFO_HELP_DOZIAK": "🔍 Donne le signe du Doziak de la date d'anniversaire spécifié",
-  "INFO_ABOUT_DESCRIPTION": "`Hey %s ! Moi c'est %s, le bot Discord spécial Almanax`",
-  "INFO_ABOUT_CREATOR": "Origines :",
-  "INFO_ABOUT_CREATOR_CONTENT": "Ma maman c'est __Nagoya 🌸#1390__, c'est elle qui a créé tous mes dessins. N'hésite pas à la contacter si tu as besoin de dessins privés",
-  "INFO_ABOUT_PROJECTS": "Autres Projets :",
-  "INFO_ABOUT_PROJECTS_CONTENT": "N'hésitez pas à faire un tour sur les autres projets de mon créateur, comme [OugAhPI](https://google.com) et [Ougahdget](https://google.com)",
-  "INFO_ABOUT_INVIT": "Lien d'Invitation :",
-  "INFO_GUILD_HISTORY": "📅 Historique :",
-  "INFO_GUILD_PILLARS": "👪 Membres Principaux :",
-  "INFO_GUILD_INFORMATIONS": "ℹ️ Informations :",
-  "INFO_GUILD_DESCRIPTION": "Niveau: `%s` / Créée le %s\nServeur: `%s`\nMembres: `%s`",
-  "INFO_GUILD_FOOTER": "%s -  %s membres  dans  %s guildes",
-  "INFO_WHOIS_SERVER": "%s Serveur: `%s`\n",
-  "INFO_WHOIS_GUILD": "%s Guilde : [%s](%s) (lvl **%s**)\n",
-  "INFO_WHOIS_ROLE": "%s Poste : `%s` (pour **%s** membres)\n",
-  "INFO_WHOIS_RANK": "%s Rang : `%s`\n",
-  "INFO_WHOIS_MARRY": "%s Marié(e) à : [%s](%s)\n",
-  "INFO_WHOIS_ALIGNMENT": "%s Alignement : `%s` (lvl **%s**)\n",
-  "INFO_WHOIS_KOLIZEUM": "%s Cote Koli : **%s**\n",
-  "INFO_WHOIS_STATS": "%s Élément principal : **%s**\n",
-  "INFO_WHOIS_SUCCESS": "%s Succès `%s` (`%s`) :",
-  "INFO_WHOIS_EXPERIENCE": "%s XP `%s` :",
-  "INFO_WHOIS_JOBS": "%s Métiers :",
-  "INFO_WHOIS_LADDER_CONTENT": "%s : **%s**\n%s: **%s**\n%s: **%s**\n%s: **%s**",
-  "SUCCESS_NOTIFICATION": "L'almanax des `%s` auras lieu dans %s jours ! préparez vos stocks !",
-  "SUCCESS_NOTIFICATION_NOW": "L'almanax des `%s` a lieu maintenant ! GO GO GO !",
-  "SUCCESS_SERVER_CHANGED": "😇 Je vous communiquerai dorénavent l'évolution des prix du serveur `%s`.",
-  "SUCCESS_LANGUAGE_CHANGED": "😇 La langue a bien été changée en `%s`.",
-  "SUCCESS_AUTO_ACTIVATED": "😇 J'enverrai dorénavent les offrandes d'Almanax du jour à minuit dans ce salon !",
-  "SUCCESS_AUTO_DESACTIVATED": "😇 J'arrêterai donc d'envoyer les offrandes d'Almanax sur ce serveur.",
-  "SUCCESS_PREFIX_CHANGED": "😇 Nouveau préfix: `%s`. Vous pouvez désormais me parlez comme ceci `%s`.",
-  "SUCCESS_NOTIFICATION_SET": "😇 Notification de l'almanax des `%s` activé !",
-  "SUCCESS_NOTIFICATION_UNSET": "😇 Notification de l'almanax des `%s` désactivé !",
-  "SUCCESS_NOTIFICATION_FORWARDED": "⚠️ Tu n'étais pas inscrit aux notifications des `%s`, donc j'ai pris la liberté de t'y inscrire.",
-  "SUCCESS_NOTIFICATION_DISABLE_FORWARDED": "⚠️ Déja inscrit à cette notification, j'ai donc annulé les notifications pour les `%s`.",
-  "ERROR_COMMAND_NOT_FOUND": "🥵 Commande `%s` introuvable. Utilise `%s`.",
-  "ERROR_UNSUPORTED_LANGUAGE": "🥵 Langage non supporté. Si tu veut ajouté le tiens contacte nous.",
-  "ERROR_UNKNOWN_SERVER": "🥵 Serveur non supporté (Seul Oshimo, Terra Cogita et Herdegrize le sont).",
-  "ERROR_AUTO_ALREADY_ACTIVATED": "🥵 Le mode auto est déjà activé dans le salon %s.",
-  "ERROR_PREFIX_ALREADY": "🥵 C'est déjà le prefix utilisé.",
-  "ERROR_TYPE_WRONG_ARGUMENT": "🥵 Ce type n'existe pas, est il bien présent dans le `%s`.",
-  "ERROR_AUTO_NOT_ACTIVATED": "🥵 Le mode auto n'est toujours pas activé sur ce serveur.",
-  "ERROR_AUTO_UNKNOWN_ARGUMENT": "🥵 Cette argument n'est pas valide, utilise 'on' ou 'off'.",
-  "ERROR_FORBIDEN": "⚠️ Ankama m'as bloqué l'accès à ses données, patientez quelques jours !",
-  "ERROR_NOTIFICATION_SHOW": "🥵 Tu n'as pas défini de rappel.",
-  "ERROR_NOTIFICATION_NOT_FOUND": "🥵 Tu n'es pas inscrit à ce rappel.",
-  "ERROR_NOTIFICATION_ALREADY_EXIST": "🥵 Tu es déjà inscrit à ce rappel.",
-  "ERROR_ALREADY_CURRENT_LANGUAGE": "🥵 C'est déjà le langage utilisé.",
-  "ERROR_INSUFFICIENT_ARGUMENT": "🥵 La commande s'utilise comme ceci: `%s`.",
-  "ERROR_INCORRECT_DATE_OR_ITEM": "🥵 Date ou Item introuvable.",
-  "ERROR_INCORRECT_ITEM": "🥵 Item introuvable.",
-  "ERROR_INCORRECT_DATE": "🥵 Date introuvable.",
-  "ERROR_NOT_FOUND": "Introuvable.",
-  "ERROR_CONTENT_NOT_FOUND": "Cette %s n'existe pas selon le site officiel.\nSi tu penses que cette %s existe réellement, clique [ICI](%s).",
-  "ERROR_LOST": "Je crois que je me suis encore perdu...",
-  "ERROR_INSUFFICIENT_PERMISSIONS": "🥵 Tu n'as pas les permissions nécéssaires, demande à un Admin."
+  "INFO_LIST_TITLE": "Almanax's bonuses list:",
+  "INFO_LIST_XP_FIELD": "XP / Drop:",
+  "INFO_LIST_JOB_FIELD": "Jobs:",
+  "INFO_LIST_MISCELLANEOUS_FIELD": "Miscellaneous:",
+  "INFO_MENTION": "Hey %s ! Use me with prefix: `%s`.",
+  "INFO_HELP_BASE": "🔍 Print this menu",
+  "INFO_HELP_ABOUT": "🔍 Display %s's information",
+  "INFO_HELP_LANG": "🔍 Change `%s`'s language",
+  "INFO_HELP_PREFIX": "🔍 Change textual command's prefix",
+  "INFO_HELP_SERVER": "🔍 Synchronize prices' fluctuations with a new Dofus-Touch server",
+  "INFO_HELP_AUTO": "🔍 Enable or disable Almanax's publication at midnight",
+  "INFO_HELP_REMIND": "🔍 Add or remove an Almanax's reminder",
+  "INFO_HELP_SHOW": "🔍 List all your registered Almanax",
+  "INFO_HELP_TYPE": "🔍 List all Almanax's date with desired bonus type",
+  "INFO_HELP_ALMANAX": "🔍 Display all date's or item's Almanax",
+  "INFO_HELP_GUILD": "🔍 Print detailled guild's information",
+  "INFO_HELP_WHOIS": "🔍 Display all character's available information",
+  "INFO_HELP_DOZIAK": "🔍 Enter your birthday to know your Doziak's symbol",
+  "INFO_ABOUT_DESCRIPTION": "`Hey %s ! I'm %s, an Almanax Discord bot`",
+  "INFO_ABOUT_CREATOR": "Origins:",
+  "INFO_ABOUT_CREATOR_CONTENT": "My mum is __Nagoya 🌸#1390__ who draw each of my images. Feel free to contact her in DM if ya need some",
+  "INFO_ABOUT_PROJECTS": "Other Projects:",
+  "INFO_ABOUT_PROJECTS_CONTENT": "Check out my creator's other projects such as [OugAhPI](https://google.com) and [Ougahdget](https://google.com)",
+  "INFO_ABOUT_INVIT": "Invit Link:",
+  "INFO_GUILD_HISTORY": "📅 History :",
+  "INFO_GUILD_PILLARS": "👪 Principal Members:",
+  "INFO_GUILD_INFORMATIONS": "ℹ️ Informations:",
+  "INFO_GUILD_DESCRIPTION": "Level: `%s` / Created the %s\nServer: `%s`\nMembers: `%s`",
+  "INFO_GUILD_FOOTER": "%s -  %s members  in  %s guilds",
+  "INFO_WHOIS_SERVER": "%s Server: `%s`\n",
+  "INFO_WHOIS_GUILD": "%s Guild: [%s](%s) (lvl **%s**)\n",
+  "INFO_WHOIS_ROLE": "%s Situation: `%s` (for **%s** members)\n",
+  "INFO_WHOIS_RANK": "%s Rank: `%s`\n",
+  "INFO_WHOIS_MARRY": "%s Married to: [%s](%s)\n",
+  "INFO_WHOIS_ALIGNMENT": "%s Alignment: `%s` (lvl **%s**)\n",
+  "INFO_WHOIS_KOLIZEUM": "%s Kolossium ranking: **%s**\n",
+  "INFO_WHOIS_STATS": "%s Main Element: **%s**\n",
+  "INFO_WHOIS_SUCCESS": "%s Success `%s` (`%s`):",
+  "INFO_WHOIS_EXPERIENCE": "%s XP `%s`:",
+  "INFO_WHOIS_JOBS": "%s Jobs:",
+  "INFO_WHOIS_LADDER_CONTENT": "%s: **%s**\n%s: **%s**\n%s: **%s**\n%s: **%s**",
+  "SUCCESS_NOTIFICATION": "`%s` almanax will begin in %s days ! be ready !",
+  "SUCCESS_NOTIFICATION_NOW": "`%s` almanax begin now ! GO GO GO !",
+  "SUCCESS_SERVER_CHANGED": "😇 I'll now comunicate you `%s`'s prices evolution.",
+  "SUCCESS_LANGUAGE_CHANGED": "😇 Language successfully switched to `%s`.",
+  "SUCCESS_AUTO_ACTIVATED": "😇 I'll now post today's Almanax at midnight in this channel !",
+  "SUCCESS_AUTO_DESACTIVATED": "😇 I won't post today's Almanax on this server anymore.",
+  "SUCCESS_PREFIX_CHANGED": "😇 Nex prefix: `%s`. You can now using the following prefix: `%s`.",
+  "SUCCESS_NOTIFICATION_SET": "😇 Reminder of `%s` almanax activated !",
+  "SUCCESS_NOTIFICATION_UNSET": "😇 Reminder of `%s` almanax cancelled !",
+  "SUCCESS_NOTIFICATION_FORWARDED": "⚠️ Not registered for `%s`, But now you are !",
+  "SUCCESS_NOTIFICATION_DISABLE_FORWARDED": "⚠️ Already register, Reminder now cancelled for `%s`.",
+  "ERROR_COMMAND_NOT_FOUND": "🥵 Command `%s` not found. Try `%s`.",
+  "ERROR_UNSUPORTED_LANGUAGE": "🥵 Unsupported language. Contact us to add one.",
+  "ERROR_UNKNOWN_SERVER": "🥵 Unsupported server. (Only Oshimo, Terra Cogita and Herdegrize are currently supported).",
+  "ERROR_AUTO_ALREADY_ACTIVATED": "🥵 Auto mode is already enabled in %s channel.",
+  "ERROR_PREFIX_ALREADY": "🥵 It's already the current prefix used on this discord server.",
+  "ERROR_TYPE_WRONG_ARGUMENT": "🥵 This type doesn't exist, it is displayed in the list from: `%s`.",
+  "ERROR_AUTO_NOT_ACTIVATED": "🥵 Auto mode isn't enabled on this server.",
+  "ERROR_AUTO_UNKNOWN_ARGUMENT": "🥵 Invalid argument, use 'on' or 'off'.",
+  "ERROR_FORBIDEN": "⚠️ Ankama prohibited me to fetch these datas...",
+  "ERROR_NOTIFICATION_SHOW": "🥵 No reminder found.",
+  "ERROR_NOTIFICATION_NOT_FOUND": "🥵 You aren't registered on this almanax.",
+  "ERROR_NOTIFICATION_ALREADY_EXIST": "🥵 You'r already following this almanax.",
+  "ERROR_ALREADY_CURRENT_LANGUAGE": "🥵 It's already the enabled language.",
+  "ERROR_INSUFFICIENT_ARGUMENT": "🥵 This command is used like this: `%s`.",
+  "ERROR_INCORRECT_DATE_OR_ITEM": "🥵 Date or Item not found.",
+  "ERROR_INCORRECT_ITEM": "🥵 Item not found.",
+  "ERROR_INCORRECT_DATE": "🥵 Date not found.",
+  "ERROR_NOT_FOUND": "Not found",
+  "ERROR_CONTENT_NOT_FOUND": "This %s doesn't exist according to official site.\nIf you really think this %s may exist, click [HERE](%s).",
+  "ERROR_LOST": "I got lost, here we go again...",
+  "ERROR_INSUFFICIENT_PERMISSIONS": "🥵 You don't have required permissions, ask an Admin."
 }
